app-ts/k8s/destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: app-service-mesh-dr

spec:
  host: app-service-mesh-svc.app.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: V1 
      labels: 
        version: V1
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: V2
      labels:
        version: V2
