app-ts/k8s/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: app-sevice-mesh-routes

spec:
  hosts:
    - app-service-mesh-svc.app.svc.cluster.local
  http:
    - fault:
        delay:
          fixedDelay: 1s
          percentage:
            value: 10
        # abort:
        #   httpStatus: 504
        #   percentage:
        #     value: 10
      route:  
      - destination:
          host: app-service-mesh-svc.app.svc.cluster.local
          subset: V1
      retries:
        attempts: 2
        perTryTimeout: 0.5s
      timeout: 1s

  # - name: "app-service-mesh-v2"
  #   match:
  #   - uri:
  #       prefix: "/teste"
  #   rewrite:
  #     uri: "/healthz"
  #   route:
  #     - destination:
  #         host: app-service-mesh-svc.app-svc.cluster.local
  #         subset: V2
  # - name: "app-service-mesh-v1"
  #   route:
  #   - destination:
  #       host: app-service-mesh-svc.app.svc.cluster.local
  #       subset: V1
    - name: "app-service-mesh-v2"
      match:
      - queryParams:
          testeab:
            exact: "true"
      route:
      - destination:
          host: app-service-mesh-svc.app.svc.cluster.local
          subset: V2
        # weight: 80
    - name: "app-service-mesh-v1"
      route:
       - destination:
          host: app-service-mesh-svc.app.svc.cluster.local
          subset: V1
        # weight: 20
